--- a/BookClub2/Base.lproj/Main.storyboard
+++ b/BookClub2/Base.lproj/Main.storyboard
@@ -1,25 +1,133 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="cW8-gW-Zb8">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Root View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="RootViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="8YB-qN-xp0">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="friendCell" id="kby-Oa-AfJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kby-Oa-AfJ" id="YDn-Il-v0b">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="vXZ-lx-hvc" id="vn7-VC-ywh"/>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="i7F-Zx-zTZ"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="8YB-qN-xp0" secondAttribute="trailing" constant="-16" id="92u-kj-Gim"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="8YB-qN-xp0" secondAttribute="bottom" id="Ogi-K6-QyV"/>
+                            <constraint firstItem="8YB-qN-xp0" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="sZ6-ez-CYQ"/>
+                            <constraint firstItem="8YB-qN-xp0" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="tcg-5w-9u0"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Nzw-9B-dXg"/>
+                    <connections>
+                        <outlet property="addButton" destination="eiX-qy-aNi" id="8Xx-6p-pIK"/>
+                        <outlet property="tableView" destination="8YB-qN-xp0" id="DJI-BM-PNf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <barButtonItem systemItem="add" id="eiX-qy-aNi">
+                    <connections>
+                        <action selector="onAddButtonPressed:" destination="vXZ-lx-hvc" id="5Zq-ly-si1"/>
+                        <segue destination="EhL-bM-Ppf" kind="push" identifier="segueToAdd" id="7nF-gN-YnO"/>
+                    </connections>
+                </barButtonItem>
             </objects>
+            <point key="canvasLocation" x="733" y="362"/>
+        </scene>
+        <!--Add Friends View Controller-->
+        <scene sceneID="mlU-dy-IUn">
+            <objects>
+                <viewController id="EhL-bM-Ppf" customClass="AddFriendsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8AH-6a-G80"/>
+                        <viewControllerLayoutGuide type="bottom" id="kEI-XH-4iG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="PAS-Ay-jDp">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="IYq-V2-tbb">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="readerCell" id="Nx9-qH-i9l">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Nx9-qH-i9l" id="6Vt-Wp-nwl">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="EhL-bM-Ppf" id="Y2m-Qe-r8B"/>
+                                    <outlet property="delegate" destination="EhL-bM-Ppf" id="qKr-wu-IWI"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="IYq-V2-tbb" firstAttribute="top" secondItem="PAS-Ay-jDp" secondAttribute="topMargin" id="118-bq-BVi"/>
+                            <constraint firstItem="kEI-XH-4iG" firstAttribute="top" secondItem="IYq-V2-tbb" secondAttribute="bottom" id="1r8-Eq-9hn"/>
+                            <constraint firstItem="IYq-V2-tbb" firstAttribute="leading" secondItem="PAS-Ay-jDp" secondAttribute="leadingMargin" constant="-16" id="QCG-nh-9PW"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="IYq-V2-tbb" secondAttribute="trailing" constant="-16" id="cWh-sl-wfW"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="r5w-Ix-LCH"/>
+                    <connections>
+                        <outlet property="tableView" destination="IYq-V2-tbb" id="qab-6q-ePg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BZQ-sx-oKN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1148" y="362"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="RLg-ZD-kKU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cW8-gW-Zb8" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="wT3-qf-0sd">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="BiV-6L-Kcd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uIR-pP-XCf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="234" y="362"/>
         </scene>
     </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
