--- a/BookClub2/Base.lproj/Main.storyboard
+++ b/BookClub2/Base.lproj/Main.storyboard
@@ -120,27 +120,77 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RIt-rL-Pu4">
-                                <rect key="frame" x="139" y="268" width="42" height="21"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b2r-P8-4Uy">
+                                <rect key="frame" x="95" y="72" width="130" height="130"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RIt-rL-Pu4">
+                                <rect key="frame" x="78" y="210" width="165" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b2r-P8-4Uy">
-                                <rect key="frame" x="75" y="90" width="170" height="170"/>
-                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="35E-hC-Z1Q">
+                                <rect key="frame" x="0.0" y="263" width="320" height="305"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="305" id="bZu-Ts-Jj8"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="bookCell" id="USk-jm-RaF">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="USk-jm-RaF" id="5SU-gG-rVf">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="qsW-4p-w9W" id="yVZ-Qx-gLi"/>
+                                    <outlet property="delegate" destination="qsW-4p-w9W" id="lNg-cI-oh3"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="mWq-IL-kt7" firstAttribute="top" secondItem="35E-hC-Z1Q" secondAttribute="bottom" id="6Ps-n4-xj3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="35E-hC-Z1Q" secondAttribute="trailing" constant="-16" id="VJu-td-Xbh"/>
+                            <constraint firstItem="35E-hC-Z1Q" firstAttribute="leading" secondItem="e0O-Ge-sQP" secondAttribute="leadingMargin" constant="-16" id="u0R-WU-S3E"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="iui-Br-h5L"/>
                     <connections>
+                        <outlet property="addButton" destination="AgR-BX-kKP" id="MFx-jZ-OW4"/>
                         <outlet property="imageView" destination="b2r-P8-4Uy" id="kab-NF-NxD"/>
                         <outlet property="nameLabel" destination="RIt-rL-Pu4" id="ECr-E5-2CU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="07x-pr-Vg2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <barButtonItem systemItem="add" id="AgR-BX-kKP">
+                    <connections>
+                        <segue destination="9bi-Z4-UXD" kind="push" identifier="segueToBookDetail" id="Lbj-RH-5fc"/>
+                    </connections>
+                </barButtonItem>
             </objects>
             <point key="canvasLocation" x="1169" y="724"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="4k5-10-5FC">
+            <objects>
+                <viewController id="9bi-Z4-UXD" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="apa-JJ-eNe"/>
+                        <viewControllerLayoutGuide type="bottom" id="MxG-ys-Xfq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lRw-p1-TmL">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="NX3-7E-7xh"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cTa-fh-kC6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1586" y="724"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="RLg-ZD-kKU">
