--- a/BookClub2/Base.lproj/Main.storyboard
+++ b/BookClub2/Base.lproj/Main.storyboard
@@ -173,7 +173,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="9bi-Z4-UXD" kind="push" trigger="accessoryAction" id="0jk-gj-YST"/>
+                                            <segue destination="9bi-Z4-UXD" kind="push" identifier="segueToBookDetail" trigger="accessoryAction" id="0jk-gj-YST"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -228,34 +228,40 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Slf-qY-FgC">
-                                <rect key="frame" x="-1" y="307" width="320" height="261"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="261" id="tcN-8f-JZl"/>
-                                </constraints>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="bookDetailCell" id="jV0-b1-duM">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jV0-b1-duM" id="env-UU-ZWF">
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Add Comments Here" translatesAutoresizingMaskIntoConstraints="NO" id="0H4-Gv-I36">
-                                <rect key="frame" x="0.0" y="196" width="320" height="91"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes"/>
-                            </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Book Author" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cNo-No-hA4">
                                 <rect key="frame" x="111" y="96" width="97" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Slf-qY-FgC">
+                                <rect key="frame" x="-1" y="201" width="320" height="367"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="367" id="tcN-8f-JZl"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="bookDetailCell" textLabel="ypS-ac-MKL" style="IBUITableViewCellStyleDefault" id="jV0-b1-duM">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jV0-b1-duM" id="env-UU-ZWF">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ypS-ac-MKL">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="9bi-Z4-UXD" id="NgJ-zO-NlC"/>
+                                    <outlet property="delegate" destination="9bi-Z4-UXD" id="TCr-7s-D5n"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -265,8 +271,20 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="NX3-7E-7xh"/>
+                    <connections>
+                        <outlet property="addCommentButton" destination="c8e-5G-gFs" id="IJC-qI-dTU"/>
+                        <outlet property="authorLabel" destination="cNo-No-hA4" id="Caf-Do-0c2"/>
+                        <outlet property="imageView" destination="x8t-G7-2ft" id="jVm-ej-u2s"/>
+                        <outlet property="tableView" destination="Slf-qY-FgC" id="XrX-cw-K8x"/>
+                        <outlet property="titleLabel" destination="pe6-Eo-SQS" id="aaq-Sb-FNK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cTa-fh-kC6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <barButtonItem title="Add Comment" id="c8e-5G-gFs">
+                    <connections>
+                        <action selector="onAddCommentButtonPressed:" destination="9bi-Z4-UXD" id="WR6-4K-zV3"/>
+                    </connections>
+                </barButtonItem>
             </objects>
             <point key="canvasLocation" x="1635" y="724"/>
         </scene>
